Massive refacoring
Add missing tags.

Decouple operations from schema types, controllers will be created and grouped by tags, types will be created from OAS schema.

Add missing operation ID's.

Extract the usage of file creation into a function, and in that function add a check for ignored files, make the code more DRY.

Rename api function argument from api to kubernetes_api, to distinct two different api's, later I'll inject openapi client.

Use explict openapi instead of default_api, it's properly generated now since I added operation Ids and tags to OAS.

Regenerated the OpenAPI client and kept default package name for easier maintenance.
