# src/controllers/mod.rs
@@ -1,3 +1,3 @@
-pub mod cat;
-pub mod dog;
-pub mod horse;
+pub mod cats;
+pub mod dogs;
+pub mod horses;
